--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 img {
 	/*border: 10px solid gray; */
 	/*opacity: 1	;*/
-	transition: .3s;
+	transition: 1s;
 	opacity: 0;
 	/*mejorar disposicion de imagenes*/
 	object-fit: cover; 
@@ -9,8 +9,11 @@ img {
 	
 	/*Efecto cargado*/
 
-	position:relative;
-	left:-40%;
+	/*position:relative;
+	left:-40%;*/
+	
+	/*efecto rotacion*/
+	transform: rotate(360deg);
 
 }
 
@@ -18,7 +21,10 @@ img.b-loaded {
 	opacity: 1;
 
 	/*efecto cargado*/
-	left: 0;
+	/*left: 0;*/
+
+	/*efecto rotacion*/
+	transform: rotate(0deg);
 	
 }
 
